# tlang

./: .gitignore  CMakeLists.txt  README.md
include/: hashmap.h  parser.h  state_machine.h  tape.h
programs/: loop.turing  oneforallv1.turing  oneforallv2.turing
src/: hashmap.c  main.c  parser.c  state_machine.c  tape.c
