cmake_minimum_required(VERSION 3.10)
project("tlang" VERSION 0.1.0 LANGUAGES C)
set(BINARY ${PROJECT_NAME})
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
add_compile_options(-Wall -Wextra -Werror -pedantic)
set(CMAKE_BUILD_TYPE Debug)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

file(MAKE_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)
file(GLOB SOURCES "src/*.c")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/../bin)

add_executable(${BINARY} ${SOURCES})
target_include_directories(${BINARY} PRIVATE include)
